# resources

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: settings.py  urls.py
resources/: models.py  serializers.py  views.py
resources/migrations/: 0001_initial.py
templates/: docs.html
utils/: tables.css
